--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 .tomate {
-	padding: 60px;
-	font-size: 30px;
+	padding: 40px;
+	font-size: 25px;
 	font-family: "Helvetica Neue", Helvetica, Arial, "sans-Serif";
 }
 .time {
-	padding: 60px;
+	padding: 20px;
 	font-size: 60px;
 	font-family: "Helvetica Neue", Helvetica, Arial, "sans-Serif";
 }
@@ -21,10 +21,16 @@
 	padding-right: 30px;
 	border: solid black 0.1px;
 }
-/*#container {
-  margin: 20px;
-  width: 200px;
-  height: 200px;
-  position: relative;
-}*/
+#use {
+	padding: 20px;
+}
+#svg circle {
+	stroke-dashoffset: 0;
+	transition: stroke-dashoffset 1500s linear;
+	stroke: grey;
+	stroke-width: 1em;
+}
+#svg #bar {
+	stroke: #EFFF1E;
+}
 
